syntax = "proto3";
package chat;
option go_package = "./chatpb";

/******** LLM ********/
message ChatRequest { string user_id = 1; string text = 2; }

message ChatResponse {
  string reply = 1;

  // 新增：本次调用的真实 token 用量
  int32 prompt_tokens     = 2;
  int32 completion_tokens = 3;
  int32 total_tokens      = 4;
}

service LLMService {
  rpc Generate(ChatRequest) returns (ChatResponse);
}

/******** Filter ********/
message FilterRequest { string text = 1; }
message FilterReply   { bool allowed = 1; string cleaned = 2; }

service FilterService {
  rpc Filter(FilterRequest) returns (FilterReply);
}

/******** Token ********/
message TokenRequest { string user_id = 1; int32 tokens = 2; }
message TokenReply   { bool allowed = 1; int64 remaining = 2; }

service TokenService {
  rpc CheckAndInc(TokenRequest) returns (TokenReply);
}

/******** History ********/
message SaveRequest   { string user_id = 1; string role = 2; string text = 3; }
message SaveReply     { bool ok = 1; }
message HistoryItem   { string role = 1; string text = 2; }
message ListRequest   { string user_id = 1; int32 limit = 2; }
message ListReply     { repeated HistoryItem items = 1; }

service HistoryService {
  rpc Save (SaveRequest) returns (SaveReply);
  rpc List (ListRequest) returns (ListReply);
}
